# BotoCop---RAG---YoutubeVid-Compliance

./: .gitignore  README.md  build.sh  main.py  pyproject.toml  render.yaml  requirements.txt
api/: index.py
backend/scripts/: find_bucket.py  index_document.py  test_models.py  verify_aws.py
backend/src/api/: server.py
backend/src/graph/: nodes.py  state.py  workflow.py
backend/src/services/: video_index.py
backend/src/utils/: device.py
backend/static/: app.js  index.html  style.css
